samples/_failures_safe/1761540623_1cbdf9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab8ce598.c: In function ‘main’:
./samples/SAFE/__tmp_ab8ce598.c:158:5: error: expected declaration or statement at end of input
  158 |     uint32_t num_events = sizeof(events) / sizeof(events[0]);
      |     ^~~~~~~~
